test/syc/good/band_assign.c
/*
 * Bitwise AND assign
 */

int a, b;

int band_assign(void)
{
	a &= b;
}
