test/syc/bad/setconstvar.c
/*
 * Setting constant variable.
 */

const int ci = 3;

void foo(void)
{
	ci = 4;
}
